navbar x en login systeem

--- a/logIn.html
+++ b/logIn.html
@@ -67,18 +67,18 @@
                     </div>
                     <div class="login-email pt-4">
                         <label for="exampleInputPassword1">Email*</label>
-                        <input type="text" class="form-control" id="mailInput">
+                        <input type="text" class="form-control" id="mailinput">
                     </div>
                     <div class="login-wachtwoord pt-4">
                         <label for="exampleInputPassword1">Wachtwoord*</label>
-                        <input type="password" class="form-control" id="wachtwoordInput">
+                        <input type="password" class="form-control" id="wachtwoordinput">
                     </div>
                     <div class="login-checkbox pt-4">
                         <input type="checkbox" id="akkoord" name="akkoord" value="Akkoord">
                         <label for="Akkoord">Onthoud mij</label><br>
                     </div>
                     <div class="login-button pt-4">
-                        <button class="btn custom-button text-white px-4" id="logIn">Log in</button>
+                        <button class="btn custom-button text-white px-4" id="login">Log in</button>
                     </div>
                 </div>
                 <div class="col-lg-7 registreer">
@@ -175,5 +175,4 @@
         </footer>
     </div>
 </body>
-
 </html>
