begin product pag

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav navigation-list">
                         <li class="nav-item px-md-4 align-self-center">
-                            <a class="nav-link" href="#">Product </a>
+                            <a class="nav-link" href="./product.html">Product </a>
                         </li>
                         <li class="nav-item align-self-center">
                             <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
