--- a/logIn.html
+++ b/logIn.html
@@ -66,8 +66,8 @@
                         <h1>Log in</h1>
                     </div>
                     <form id="form-login">
-                        <div class="alert alert-danger foutmelding-login" role="alert">
-                            De combinatie van e-mailadres en wachtwoord is niet geldig.
+                        <div class="alert alert-danger melding-login" role="alert">
+                            <p>De combinatie van e-mailadres en wachtwoord is niet geldig.</p>
                         </div>
                         <div class="login-email pt-4">
                             <label for="exampleInputPassword1">Email*</label>
@@ -87,8 +87,9 @@
                         <h1>Registreer</h1>
                     </div>
                     <form id="form-registreer" class="row registreer-input">
-                        <div class="col-md-12 alert alert-danger foutmelding-registreer" role="alert">
-                            Gelieve de verplichte velden in te vullen! (*)
+                        <div class="col-md-12 melding-registreer" role="alert">
+                            <p class="alert alert-danger">Gelieve de verplichte velden in te vullen! (*)</p>
+                            <p class="alert alert-success">U bent succesvol geregistreerd!</p>
                         </div>
                         <div class="col-md-6 registreer-naam pt-4">
                             <label for="exampleInputPassword1">Naam*</label>
