--- a/bestel.html
+++ b/bestel.html
@@ -91,7 +91,7 @@
                         </div>
                         <p>De MyPingwing app vereist iPhone 6s of nieuwer <br> ios 14 of hoger, of toestellen met Android 9.0</p>
                         <hr>
-                        <button class="custom-button">In winkelmandje</button>
+                        <button type="button" class="custom-button" data-toggle="modal" data-target="#inWinkelMandjePopUp">In winkelmandje</button>
                     </div>
                 </div>
             </main>
@@ -139,5 +139,26 @@
                     </div>
                 </div>
             </footer>
+  <!-- Modal -->
+  <div class="modal fade custom-popup" id="inWinkelMandjePopUp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header justify-content-between align-items-center ">
+          <img src="./Images/checkmark.png">
+          <h5 class="modal-title pl-4" id="exampleModalLabel">Het artikel is toegevoegd aan je winkelmandje</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>content moet nog gemaakt worden in js</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="custom-button-stroke" data-dismiss="modal">Verder winkelen</button>
+          <button type="button" class="custom-button">Afrekenen</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
