quick fix genral javascript

--- a/over_ons.html
+++ b/over_ons.html
@@ -8,7 +8,7 @@
     <script src="./assets_bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
     <script defer src="./js/over_ons.js"></script>
-    <script defer src="./js/hamburger_menu.js"></script>
+    <script defer src="./js/general.js"></script>
     <link rel="stylesheet" href="./scss/over_ons.css">
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
