--- a/product.html
+++ b/product.html
@@ -8,9 +8,9 @@
 <script src="./assets_bootstrap/bootstrap.min.js"></script>
 <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
 <script defer src="./js/index.js"></script>
+<script defer src="./js/general.js"></script>
 <link rel="stylesheet" href="./scss/index.css">
 <link rel="stylesheet" href="./scss/product.scss">
-<script defer src="./js/hamburger_menu.js"></script> 
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
 <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
