--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./scss/winkelmandje.css">
     <script defer src="./js/winkelmandje.js"></script>
-    <script defer src="./js/hamburger_menu.js"></script>
+    <script defer src="./js/general.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
