--- a/bestel.html
+++ b/bestel.html
@@ -9,7 +9,7 @@
     <script src="./assets_bootstrap/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets_bootstrap/bootstrap.min.css">
     <script defer src="./js/bestel.js"></script>
-    <script defer src="./js/hamburger_menu.js"></script>
+    <script defer src="./js/general.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
@@ -61,10 +61,10 @@
             <!--Main body-->
             <main class="main container pt-5">
                 <div class="row">
-                    <div class="col-lg-7 d-flex justify-content-center align-items-center">
+                    <div class="col-md-7 bestel-foto d-flex justify-content-center align-items-center">
                         <img class="main-container-col1-img"src="./images/BandRoodPingGroen.png">
                     </div>
-                    <div class="col">
+                    <div class="col-md-5 pb-5 pb-md-0 bestel-info">
                         <p>Prijs</p>
                         <h3 class="main-container-col2-prijs">69,69</h3>
                         <span class="dot-r"></span>
