--- a/logIn.html
+++ b/logIn.html
@@ -115,11 +115,11 @@
                             <label for="exampleInputPassword1">Stad</label>
                             <input type="text" class="form-control" id="postcodeuser">
                         </div>
-                    </form>
-                    <div class="registreer-checkbox pt-4">
-                        <input type="checkbox" id="akkoord" name="akkoord" value="Akkoord">
-                        <label for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing</label><br>
+                    <div class="col-12 registreer-checkbox pt-4">
+                        <input type="checkbox" id="akkoord-vinkje" name="akkoord" value="Akkoord">
+                        <label id="vinkje" for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing (*)</label><br>
                     </div>
+                </form>
                     <div class="registreer-button pt-4">
                         <button class="btn custom-button text-white px-4" id="registreer">Registreer</button>
                     </div>
