parralax in progress

--- a/index.html
+++ b/index.html
@@ -403,9 +403,11 @@
                 </div>
             </div>
         </main>
-        <div class="footer-image">
-            <img class="img-fluid w-100" src="./Images/Group 564.png" alt="">
-        </div>
+        <div class="footer-image"></div>
+            <img class="img-fluid fotos" id="bovenlqqg" src="./images/bovenlqqg.png" alt="">
+            <img class="img-fluid fotos" id="mountain" src="./Images/mountain.png" alt="">
+            <img class="img-fluid fotos" id="beach" src="./Images/beach.png" alt="">
+            <img class="img-fluid fotos" id="land" src="./Images/land.png" alt="">
         <!--FOOTER-->
         <footer class="row">
             <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-md-5">
