index in werking

--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                               </div>
                         </div>
-                        <div class="col-md-12 d-flex pt-3 justify-content-md-end justify-content-center">
-                            <button class="btn px-4">Verzenden</button>
+                        <div class="col-md-12 d-flex justify-content-md-end justify-content-center">
+                            <button class="btn btn-info custom-button mb-3">Verzenden</button>
                         </div>
                     </div>
                 </div>
