WIP Bestellen js

--- a/bestel.html
+++ b/bestel.html
@@ -91,7 +91,7 @@
                         </div>
                         <p>De MyPingwing app vereist iPhone 6s of nieuwer <br> ios 14 of hoger, of toestellen met Android 9.0</p>
                         <hr>
-                        <button type="button" class="custom-button" data-toggle="modal" data-target="#inWinkelMandjePopUp">In winkelmandje</button>
+                        <button type="button" id="inwinkelmandje" class="custom-button" data-toggle="modal" data-target="#inWinkelMandjePopUp">In winkelmandje</button>
                     </div>
                 </div>
             </main>
