bestel popup scuffed

--- a/bestel.html
+++ b/bestel.html
@@ -67,9 +67,9 @@
                     <div class="col-md-5 pb-5 pb-md-0 bestel-info">
                         <p>Prijs</p>
                         <h3 class="main-container-col2-prijs">69,69</h3>
-                        <span class="dot-r" id="dotrood"></span>
-                        <span class="dot-y" id="dotgeel"></span>
-                        <span class="dot-b" id="dotblauw"></span>
+                        <span class="dot-r" id="dotrood" value="0"></span>
+                        <span class="dot-y" id="dotgeel" value="0"></span>
+                        <span class="dot-b" id="dotblauw" value="0"></span>
                         <hr>
                         <img class="main-container-col2-truck"src="./images/Truck.png">
                         <p>Standaard levering</p>
@@ -150,8 +150,8 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <p>content moet nog gemaakt worden in js</p>
+        <div class="modal-body" id="modalbody">
+          <p>Je kan het aantal aanpassen in het winkelmandje</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="custom-button-stroke" data-dismiss="modal">Verder winkelen</button>
