--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="row position-relative d-flex flex-column row-overping">
-                <div class="row d-flex justify-content-center row-overping-titel pb-5">
+                <div class="row d-flex justify-content-center row-overping-titel py-5 mt-5">
                     <h1 class="display-3">Over PINGWING</h1>
                 </div>
                 <img class="position-absolute cloud4" src="./images/cloud4.png" alt="cloud4">
@@ -159,11 +159,13 @@
                 </div>
             </div>
         </main>
-        <div class="footer-image"></div>
+        <div class="footer-image">
             <img class="img-fluid fotos" id="bovenlqqg" src="./images/bovenlqqg.png" alt="">
-            <img class="img-fluid fotos" id="mountain" src="./Images/mountain.png" alt="">
-            <img class="img-fluid fotos" id="beach" src="./Images/beach.png" alt="">
-            <img class="img-fluid fotos" id="land" src="./Images/land.png" alt="">
+            <img class="img-fluid fotos" id="mountain" src="./images/mountain.png" alt="">
+            <img class="img-fluid fotos" id="water" src="./images/water.png" alt="">
+            <img class="img-fluid fotos" id="beach" src="./images/beach.png" alt="">
+            <img class="img-fluid fotos" id="land" src="./images/land.png" alt="">
+        </div>
         <!--FOOTER-->
         <footer class="row">
             <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-md-5">
