Contact form validation, login form validion (no email), winkelmandje update

--- a/logIn.html
+++ b/logIn.html
@@ -92,16 +92,16 @@
                             <p class="alert alert-success">U bent succesvol geregistreerd!</p>
                         </div>
                         <div class="col-md-6 registreer-naam pt-4">
-                            <label for="exampleInputPassword1">Naam*</label>
-                            <input type="text" class="form-control" id="naamuser">
+                            <label class="invalidtxt" for="exampleInputPassword1">Naam*</label>
+                            <input type="text" class="form-control invalid" id="naamuser">
                         </div>
                         <div class="col-md-6 registreer-email pt-4">
-                            <label for="exampleInputPassword1">Email*</label>
-                            <input type="text" class="form-control" id="mailuser">
+                            <label class="invalidtxt" for="exampleInputPassword1">Email*</label>
+                            <input type="text" class="form-control invalid" id="mailuser">
                         </div>
                         <div class="col-md-6 registreer-wachtwoord pt-4">
-                            <label for="exampleInputPassword1">Wachtwoord*</label>
-                            <input type="password" class="form-control" id="wachtwoorduser">
+                            <label class="invalidtxt" for="exampleInputPassword1">Wachtwoord*</label>
+                            <input type="password" class="form-control invalid" id="wachtwoorduser">
                         </div>
                         <div class="col-md-6 registreer-telefoon pt-4">
                             <label for="exampleInputPassword1">Telefoon</label>
@@ -115,11 +115,11 @@
                             <label for="exampleInputPassword1">Stad</label>
                             <input type="text" class="form-control" id="postcodeuser">
                         </div>
-                    <div class="col-12 registreer-checkbox pt-4">
-                        <input type="checkbox" id="akkoord-vinkje" name="akkoord" value="Akkoord">
-                        <label id="vinkje" for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing (*)</label><br>
-                    </div>
-                </form>
+                        <div class="col-12 registreer-checkbox pt-4">
+                            <input type="checkbox" id="akkoord-vinkje" name="akkoord" value="Akkoord">
+                            <label id="vinkje" for="Akkoord">Ik ga akkoord met de voorwaarden van Pingwing (*)</label><br>
+                        </div>
+                    </form>
                     <div class="registreer-button pt-4">
                         <button class="btn custom-button text-white px-4" id="registreer">Registreer</button>
                     </div>
