--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -85,7 +85,7 @@
                                 <div class="col-md-6 col-12 winkelmandje-details-box-info-details">
                                     <div class="row">
                                         <div class="col-md-6 col-12 d-flex justify-content-md-start justify-content-center winkelmandje-details-box-info-details-product">
-                                            <p>test</p>
+                                            <img src="./images/BandRoodPingGroen.png" class="img img-fluid image-product" alt="">
                                         </div>
                                         <div class="col-md-6 col-12 d-flex justify-content-md-start justify-content-center pl-3 pt-4">
                                             <div class="d-flex flex-column text-center text-md-left">
@@ -143,7 +143,7 @@
                             <p>€69</p>
                         </div>
                         <div class="col-12 winkelmandje-betalen-betalen">
-                            <button class="btn btn-primary w-100">BETALEN</button>
+                            <button class="btn btn-primary custom-button w-100">BETALEN</button>
                         </div>
                     </div>
                 </div>
