--- a/over_ons.html
+++ b/over_ons.html
@@ -74,7 +74,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/Rik.png">
+                    <img src="./images/RikHoofd.png">
                   </div>
                 <div class="col-md-6 py-md-5 pb-5 column-content">
                     <h1 class="text-md-left text-center">Rik</h1>
@@ -92,12 +92,12 @@
                     </p>
                 </div>
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
-                    <img src="./images/Kai.png">
+                    <img src="./images/KaiHoofd.png">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/Thymen.png">
+                    <img src="./images/ThymenHoofd.png">
                 </div>
                 <div class="col-md-6 py-md-5 pb-5 column-content">
                     <h1 class="text-md-left text-center">Thymen</h1>
@@ -114,12 +114,12 @@
                     </p>
                 </div>
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
-                    <img src="./images/Dries.png">
+                    <img src="./images/DriesHoofd.png">
                 </div>
             </div>
             <div class="row pb-5">
                 <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/Arisha.png">
+                    <img src="./images/ArishaHoofd.png">
                 </div>
                 <div class="col-md-6 py-md-5 pb-5 column-content">
                     <h1 class="text-md-left text-center">Arisha</h1>
